enh: Управление тиражами
